[package]
name = "image-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
mime_guess = "2.0.5"
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.26", features = ["derive", "env"] }
image = "0.25.5"
path-clean = "1.0.1"
cached = "0.54"
urlencoding = "2.1.3"
derive_builder = "0.20.2"
axum-range = "0.5.0"
axum-extra = "0.10.1"
bytes = "1.10.1"
fast_image_resize = { version = "5.1.1", features = ["image", "rayon"] }
