[package]
name = "image-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
cached = "0.54"
bytes = "1.10"
axum = "0.8"
axum-range = "0.5"
axum-extra = "0.10"
mime_guess = "2"
rust-embed = "8"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
path-clean = "1"
derive_builder = "0.20"
image = "0.25"
fast_image_resize = { version = "5", features = ["image", "rayon"] }

# Binary dependencies
local-ip-address = "0.6.3"
qrcode = { version = "0.14.1", default-features = false }
console = "0.15.11"
env_logger = "0.11.8"
clap-verbosity-flag = "3.0.4"
