[package]
name = "image-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
cached = "0.54"
bytes = "1.10"
axum = "0.8"
axum-range = "0.5"
axum-extra = "0.10"
mime_guess = "2"
rust-embed = "8"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
path-clean = "1"
derive_builder = "0.20"
image = "0.25"
fast_image_resize = { version = "5", features = ["image", "rayon"] }

local-ip-address = { version = "0.6.3", optional = true }
qrcode = { version = "0.14.1", default-features = false, optional = true }
console = { version = "0.15.11", optional = true }
env_logger = { version = "0.11.8", optional = true }
clap-verbosity-flag = { version = "3.0.4", optional = true }

[lib]
name = "image_provider"

[features]
cli = ["local-ip-address", "qrcode", "console", "env_logger", "clap-verbosity-flag"]

[[bin]]
name = "image-provider"
required-features = ["cli"]
